[package]
name = "beatdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
constant_time_eq = "0.3.0"
duration-string = { version = "0.3.0", features = ["serde"] }
eyre = "0.6.11"
hmac = "0.12.1"
hound = "3.5.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
minimp3 = "0.5.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio"], default-features = false }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
